fixed images sizing on mobile

--- a/index.scss
+++ b/index.scss
@@ -635,8 +635,8 @@ main {
         }
       }
       img {
-        height: 80vh;
-        width: auto;
+        height: auto;
+        width: 90vw;
       }
     }
     h4 {
@@ -656,8 +656,8 @@ main {
         }
       }
       img {
-        height: 70vh;
-        width: auto;
+        height: auto;
+        width: 100vw;
       }
     }
     h4 {
